# mcp-weather-app-local-agent

./: .gitignore  README.md  pyproject.toml
docs/: index.html
src/: server.py
src/client/: agentic_client.py  agentic_client_simple.py
src/tools/: weather.py
tests/: test_weather.py
