[project]
name = "mcp-weather-app"
version = "0.1.0"
description = "MCP server exposing weather and forecast tools via FastMCP (wttr.in)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.27.0",
    "langchain-ollama>=0.3.0",
    "mcp>=1.26.0",
    "mcp-use @ git+https://github.com/mcp-use/mcp-use.git#subdirectory=libraries/python",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]